// tag::header[]
[width=100%,cols="10%, 30%, 60%", frame=none, grid=rows, options="header"]
|===
| *Date* | *Solution Area* | *Description of change*
// end::header[]
// tag::aiml[]
| 10/11/2023 | AI | New solution: Hybrid Multicloud MLOps with Domino Data Lab and NetApp
// end::aiml[]
// tag::rhhc[]
| 10/10/2023 | Hybrid Multicloud with Red Hat OpenShift | Added new content for Google Cloud
// end::rhhc[]
// tag::ent-db[]
| 09/29/2023 | Database | Added new TR-4981: Active Data Guard Cost Reduction with AWS FSx ONTAP
// end::ent-db[]
// tag::aiml[]
| 09/19/2023 | AI | Added whitepaper: Generative AI and NetApp Value
// end::aiml[]
// tag::hmc[]
| 08/17/2023 | Hybrid Cloud | Added: Using Veeam Replication and Azure NetApp Files datastore for disaster recovery to Azure VMware Solution 
| 08/17/2023 | Hybrid Cloud | Added: Using Veeam Replication and FSx for ONTAP for Disaster recovery to VMware Cloud on AWS 
// end::hmc[]
// tag::vmware[]
| 08/15/2023 | Virtualization | Redesigned the virtualization (VMware) landing page
// end::vmware[]
// tag::ent-db[]
| 08/02/2023 | Database | Added new TR-4977: Oracle Database backup, restore and clone with SnapCenter Services - Azure
// end::ent-db[]
// tag::aiml[]
| 07/14/2023 | Data Analytics | Update TR-4947 : Apache Kafka workload with NetApp NFS storage ( AWS FSxN included )
// end::aiml[]
// tag::ent-db[]
| 06/09/2023 | Database | Added new TR-4973: Quick Recovery and Clone of Oracle VLDB with Incremental Merge on AWS FSx ONTAP
// end::ent-db[]
// tag::hmc[]
| 06/08/2023 | Hybrid Cloud | Added GCVE with CVS - Application Consistent Disaster Recovery with NetApp SnapCenter and Veeam Replication
| 06/08/2023 | Hybrid Cloud | Added GCVE with CVS - VM Migration to NetApp Cloud Volume Service NFS Datastore on Google Cloud VMware Engine using Veeam Replication feature
// end::hmc[]
// tag::vmware[]
| 05/23/2023 | Virtualization | Added TR-4400: VMware vSphere Virtual Volumes (vVols) with NetApp ONTAP
// end::vmware[]