@@ -30,6 +30,10 @@ include::_include/change-log.adoc[tags=header;aiml]
 --
 include::_include/change-log.adoc[tags=header;hmc]
 --
+.VMware Sovereign Cloud
+--
+include::_include/change-log.adoc[tags=header;vmw-sc]
+--
 .Hybrid Multicloud with Red Hat OpenShift
 --
 include::_include/change-log.adoc[tags=header;rhhc]
