@@ -1,0 +1,22 @@
+section: vmw-sc
+title: "VMware Sovereign Cloud"
+url: /vmw-sc/index.html
+entries:
+  - title: "VMware Resources for Sovereign Cloud"
+    entries:
+        - title: "VMware Sovereign Cloud Overview"
+          url: https://www.vmware.com/content/dam/digitalmarketing/vmware/en/pdf/docs/vmw-sovereign-cloud-solution-brief-customer.pdf
+        - title: "What is VMware Sovereign Cloud?"
+          url: https://www.vmware.com/topics/glossary/content/sovereign-cloud.html
+        - title: "Introducing the New VMware Sovereign Cloud Initiative"
+          url: https://blogs.vmware.com/cloud/2021/10/06/vmware-sovereign-cloud/
+        - title: "VMware Sovereign Cloud Technical White Paper"
+          url: https://www.vmware.com/content/dam/learn/en/amer/fy22/pdf/1173457_Sovereign_Cloud_Technical_Whitepaper_V3.pdf
+#
+  - title: "NetApp and VMware Sovereign Cloud"
+    entries:
+        - title: "Sovereign Cloud Overview"
+          url: /vmw-sc/sc-overview.html
+        - title: "Uses Cases with NetApp"
+          url: /vmw-sc/sc-use-cases.html
+#
